--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,1 @@
-*.php linguist-detectable=true
-*.csharp linguist-detectable=false  
-*.java linguist-detectable=false  
-*.js linguist-detectable=false  
-*.xml linguist-detectable=false  
+*.HTML linguist-Language=PHP
